# drf-social-network

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
src/: .coverage  db.sqlite3
src/api/v1/comment/: views.py
src/api/v1/post/: serializers.py  views.py
src/api/v1/user/: serializers.py  views.py
src/apps/account/: urls.py
src/apps/comment/: models.py  serializers.py  urls.py
src/apps/comment/dto/: comment_dto.py
src/apps/comment/migrations/: 0001_initial.py
src/apps/comment/repositories/: comment_repositories.py
src/apps/comment/services/: comment_services.py  model_services.py
src/apps/comment/tests/: conftest.py  test_comment_api.py
src/apps/post/: models.py  serializers.py  services.py  tasks.py  urls.py
src/apps/post/dto/: post_dto.py
src/apps/post/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_title.py  0004_delete_comment.py  0005_post_like_count.py  0006_post_views_count.py
src/apps/post/repositories/: post_repositories.py
src/apps/post/repository/: post_repositories.py
src/apps/post/services/: post_services.py
src/apps/post/tests/: conftest.py  test_post_api.py  test_post_repositories.py  test_post_services.py
src/apps/user/: admin.py  models.py  services.py  tasks.py  urls.py
src/apps/user/dto/: user_dto.py
src/apps/user/migrations/: 0001_initial.py  0002_alter_profileuser_phone.py  0003_alter_profileuser_phone.py
src/apps/user/repositories/: user_repositories.py
src/apps/user/services/: model_services.py  user_services.py
src/config/: settings.py  urls.py
(+4 files in other folders)
